Test/git-issues/git-issue-19c.dfy.expect
git-issue-19c.dfy(41,10): Error: a set comprehension involved in a function definition is not allowed to depend on the set of allocated references, but values of 'basic' may contain references (see documentation for 'older' parameters)
git-issue-19c.dfy(86,12): Error: a function is allowed to be listed in a reads clause only if the function's arguments do not involve any reference types, because then the resulting reads set would depend on the set of allocated references; here, the type 'Basic' violates this rule (see documentation for 'older' parameters)
git-issue-19c.dfy(93,12): Error: a function is allowed to be listed in a reads clause only if the function's arguments do not involve any reference types, because then the resulting reads set would depend on the set of allocated references; here, the type 'X' violates this rule (perhaps declare type 'X' with '(!new)') (see documentation for 'older' parameters)
git-issue-19c.dfy(100,12): Error: a function is allowed to be listed in a reads clause only if the function's arguments do not involve any reference types, because then the resulting reads set would depend on the set of allocated references; here, the type 'X' violates this rule (perhaps declare type 'X' with '(!new)') (see documentation for 'older' parameters)
git-issue-19c.dfy(110,10): Error: a reads-clause expression must denote an object, a set/iset/multiset/seq of objects, or a function to a set/iset/multiset/seq of objects (instead got int -> set<int>)
git-issue-19c.dfy(111,10): Error: a reads-clause expression must denote an object, a set/iset/multiset/seq of objects, or a function to a set/iset/multiset/seq of objects (instead got int ~> iset<bool>)
git-issue-19c.dfy(112,10): Error: a reads-clause expression must denote an object, a set/iset/multiset/seq of objects, or a function to a set/iset/multiset/seq of objects (instead got int --> map<Basic, Basic>)
git-issue-19c.dfy(113,10): Error: a reads-clause expression must denote an object, a set/iset/multiset/seq of objects, or a function to a set/iset/multiset/seq of objects (instead got int --> imap<Basic, Basic>)
git-issue-19c.dfy(121,12): Error: a reads-clause expression must denote an object, a set/iset/multiset/seq of objects, or a function to a set/iset/multiset/seq of objects (instead got int ~> int)
git-issue-19c.dfy(141,12): Error: a function is allowed to be listed in a reads clause only if the function's arguments do not involve any reference types, because then the resulting reads set would depend on the set of allocated references; here, the type 'Basic' violates this rule (see documentation for 'older' parameters)
git-issue-19c.dfy(149,14): Error: a function is allowed to be listed in a reads clause only if the function's arguments do not involve any reference types, because then the resulting reads set would depend on the set of allocated references; here, the type 'Basic' violates this rule (see documentation for 'older' parameters)
11 resolution/type errors detected in git-issue-19c.dfy
